# mkdocs-jupyter

./: .coveragerc  .envrc  .firebaserc  .gitattributes  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  RELEASE.md  Taskfile.yml  environment.yml  firebase.json  justfile  pyproject.toml  requirements-dev.txt  requirements-package.txt  requirements.package.txt  requirements.txt  setup.cfg  setup.py  taskfile.yml
.github/workflows/: demo.yml  dev.yml  docs-cf-pages.yml  docs-cloudflare.yml  docs-firebase.yml  docs-post.yml  docs.yml  main.yml  pythonpackage.yml  release.yml  test.yml
demo/: mkdocs.yml
demo/docs/: demo-md.md  demo-nb-md.ipynb  demo-script.py  index.md  variational-inference-nb.ipynb  variational-inference-script.py
demo/extras/: README.md  styles.css  styles.py
demo/site/: 404.html  demo-nb-md.ipynb  demo-nb.ipynb  demo-script.py  index.html  ruby.ipynb  sitemap.xml  variational-inference-script.py
demo/site/demo-md/: index.html
demo/site/demo-nb/: index.html
demo/site/demo-nb-md/: index.html
demo/site/demo-script/: index.html
demo/site/fail/: index.html
demo/site/ruby/: index.html
demo/site/search/: search_index.json
demo/site/variational-inference-nb/: index.html
demo/site/variational-inference-script/: index.html
js/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  webpack.config.js
js/src/: index.js  styles.scss  theme-dark.js  theme-light.js
js/src/jlab/: index.scss
js/src/styles/: bu_jupyter-lab-index.scss  index.scss  jupyter-lab-index.scss  jupyter-lab-theme-dark.scss  jupyter-lab-theme-light.scss  jupyter-lab.scss  theme-switcher.scss  theme.css  variables.scss
mkdocs_jupyter/: __about__.py  __init__.py  _version.py  convert.py  demo.html  nbconvert2.py  plugin.py  templates.py  utils.py
mkdocs_jupyter/assets/: ipywidgets.html  jupyter-fixes.css  jupyter-fixes.min.css  jupyter-fixes.min.css.map  jupyter-fixes.scss  md-no-codecell.tpl  notebook.tpl
mkdocs_jupyter/templates/mkdocs_html/: .gitignore  jupyter-fixes.css  notebook.html.j2  notebook2.html.j2
mkdocs_jupyter/templates/mkdocs_html/assets/: .gitignore  clipboard.umd.js
mkdocs_jupyter/templates/mkdocs_html/styles/: jupyter-lab.css  jupyter-lab.css.map
mkdocs_jupyter/templates/mkdocs_md/: conf.json
mkdocs_jupyter/tests/: mkdocs-without-nbs.yml  test_base_usage.py  test_import.py  test_pkg.py
mkdocs_jupyter/tests/mkdocs/: base-with-nbs-failure.yml  base-with-nbs-pys.yml  base-with-nbs.yml  base-with-pys.yml  base-without-nbs.yml  material-with-nbs-pys.yml  material-with-nbs.yml  material-with-pys.yml  mkdocs-with-nbs-material.yml  mkdocs-with-nbs.yml  mkdocs-with-pys-material.yml  mkdocs-with-pys.yml
mkdocs_jupyter/tests/mkdocs/docs/: demo-script.py  demo.ipynb  demo.py  index.md  variational-inference-script.py  variational-inference.ipynb  variational-inference.py
mkdocs_jupyter/tests/mkdocs/docs/extras/: styles.py
mkdocs_jupyter/tests/mkdocs/overrides/: main.html
requirements/: all.txt  linting.in  linting.txt  pyproject.txt
src/mkdocs_jupyter/: __about__.py  config.py  convert.py  nbconvert2.py  plugin.py  preprocessors.py  utils.py
src/mkdocs_jupyter/templates/mkdocs_html/: conf.json  notebook.html.j2
src/mkdocs_jupyter/templates/mkdocs_md/: md-no-codecell.md.j2
src/mkdocs_jupyter/tests/: test_base_usage.py  test_cache.py  test_pkg.py  test_toc.py
src/mkdocs_jupyter/tests/mkdocs/: base-with-mds.yml  base-with-nbs-pys.yml  base-with-nbs.yml  material-execute-ignore.yml  material-with-mds.yml  material-with-nbs.yml
src/mkdocs_jupyter/tests/mkdocs/docs/: backquote_toc_test.ipynb  demo-jupytext.md  demo-script.py  demo.ipynb  fail.ipynb  ruby.ipynb  variational-inference-script.py  variational-inference.ipynb  variational-inference.md
src/mkdocs_jupyter/tests/mkdocs/docs/data/: test.xlsx
src/mkdocs_jupyter/tests/mkdocs/docs/extras/: material.css  styles.py
src/mkdocs_jupyter/tests/mkdocs/overrides/: main.html
tests/: mkdocs-basic.yml  mkdocs-jupyter.yml  test_base_usage.py
tests/docs/: index.md
